Fix Alignment of elements

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -5,23 +5,33 @@ body {
 
 .card {
   width: 400px;
-  background: #fff;
+  background: #ffffff;
   margin: 16px auto;
+  padding: 10px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 15px;
 }
 
 .content {
   background: #e3f4ff;
+padding: 15px;
+margin-bottom: 20px;
 }
 
 .button-container {
+  display: block;
   background: #e3f4ff;
+  padding-left: 120px;
+  padding-right: 120px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding: 15px;
+  margin:10px 10px 10px 10px;
 }
